# dotthefiles

./: .gitignore  .huskyrc.yaml  .versionrc.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: master.yml  pr-check.yml  pr-name-lint.yml  pr.yml  release.yml  rust.yml
cli/: Cargo.toml  README.md
cli/src/: hard_link.rs  lib.rs  report.rs  sudo.rs
dtf/: Cargo.toml
dtf/src/: main.rs  validate_config.rs
dtflib/: Cargo.toml  README.md
dtflib/src/: client_os.rs  context.rs  dotfile.rs  lib.rs
examples/a03/: dotthefiles.yml
examples/a04/: dotthefiles.yml
examples/a06/: dotthefiles.yml
examples/a08/: dotthefiles.yml
examples/a12/: dotthefiles.yml
examples/a15/: dotthefiles.yml
git-hooks/: commit-msg  pre-commit
parser/: Cargo.toml  README.md
parser/examples/a02/: dotthefiles.yml
parser/examples/a05/: dotthefiles.yml
parser/examples/a07/: dotthefiles.yml
parser/examples/a09/: dotthefiles.yml
parser/examples/a10/: dotthefiles.yml
parser/examples/a11/: dotthefiles.yml
parser/examples/a13/: dotthefiles.yml
parser/examples/a14/: dotthefiles.yml
parser/examples/a16/: dotthefiles.yml
parser/examples/a17/: dotthefiles.yml  file.sh
parser/src/: config.rs  lib.rs  mapping.rs  read_file.rs  render.rs
parser/src/config/: block.rs  config.rs  mod.rs  section.rs  target.rs
scripts/: osxcross-setup.sh
src/: app.rs  cli.rs  cnst.rs  context.rs  main.rs
src/cmd/: link.rs  ln.rs  mod.rs
src/lib/: client_os.rs  config.rs  dotfile.rs  link.rs  mapping.rs  mod.rs  op.rs  question.rs  (+6 more)
tests/: run.sh
trial/: README.md  lib.sh  run.sh
(+18 files in other folders)
