[package]
name = "dotthefiles"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
os_info = { version = "2" }
structopt = { version = "0.3" }
serde = { version = "1.0" }
serde_yaml = { version = "0.8" }
dirs = { version = "3.0" }
comfy-table = { version = "1.0" }
rustyline = { version = "6.2" }
colored = { version = "2.0" }

[dev-dependencies]
pretty_assertions = { version = "0.6" }
