[package]
name = "dtf"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
os_info = "2.0"
dirs = "3.0"
serde_json = "1.0"
libc = "0.2"
colored = { version = "2.0" }

cli = { path = "../cli" }
dtflib = { path = "../dtflib" }
parser = { path = "../parser" }
